--- a/HTML Exercises.html
+++ b/HTML Exercises.html
@@ -50,6 +50,7 @@
       <figure>  
         <figcaption>
           <h4>Ms. Yasmin Marie Asistido</h4>
+          <td>with</td>
         </figcaption>
       </figure>
       <br>
