--- a/HTML Exercises.html
+++ b/HTML Exercises.html
@@ -50,7 +50,11 @@
       <figure>  
         <figcaption>
           <h4>Ms. Yasmin Marie Asistido</h4>
-          <td>with</td>
+          <td>with more than 300 thousand followers on Facebook,internet royalty Yasmin
+            Asistido a.k.a Kween Yasmin , has proven herself to be much more than just a meme.
+            She's an icon,Shes's am legend, and she is the moment.But if you will ask us
+            why? TBH, we're not really sure. But whatever she's up to, we are all for it!
+          </td>
         </figcaption>
       </figure>
       <br>
