--- a/HTML Exercises.html
+++ b/HTML Exercises.html
@@ -148,4 +148,4 @@
   <br>
   <footer><h4>Copyright© 2024. Jesting Permitted, Stealing Kween's poetry not </h4></footer>
     </body>
-</html>  
+</html>  \
