--- a/html3.html
+++ b/html3.html
@@ -4,21 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    
 </head>
 <body>
-    <header>
+    <header style="background-color: #333; color: #fff; padding: 10px;">
         <h1>Welcome to Basta Magiging Website to later</h1>
         <nav>  
-            <a href="#">Section 1</a>
-            <a href="#">Section 2</a>
-            <a href="#">Section 3</a>
+            <button onclick="scrollToSection('Section 1')">Section 1</button>
+            <button onclick="scrollToSection('Section 2')">Section 2</button>
+            <button onclick="scrollToSection('Section 3')">Section 3</button>
         </nav>
     </header>
+    <script>
+        function scrollToSection(sectionId){
+            const section = document.getElementById(sectionId);
+            if (section){
+                section.scrollIntoView({behavior:"smooth"});
+            }
+        }
+    </script>
     <main>
+        <form>
+            <label for="name">Name:</label><br>
+            <input type="text" id="name" name="name" required><br>
+
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email" required><br>
+
+            <label for="age">Age:</label><br>
+            <input type="number" id="age" name="age" min="18" max="99" required><br>
+
+            <label for="dob">Date of Birth:</label><br>
+            <input type="date" name="dob" id="dob" required><br>
+
+            <label for="password">Password:</label><br>
+            <input type="password" id="password" name="password" pattern=".{8,}" required><br>
+            <br>
+            <input type="submit" value="Submit"><br>
+        </form>
+        <div id="confirmationMessage" style="display: none;">Form submitted successfully!</div>
+        <script>
+            $(document).ready(function() {
+                $("#myForm").on("submit", function(event){
+                event.preventDefault();
+                $("#confirmationMessage").show();
+                console.log("Form submitted:", $(this).serialize());
+            });
+        });
+        </script>
         <section id="Section 1">
             <h2>Section 1</h2>
             <p>Wala pang content to kasi sample palang</p>
         </section>
+        <section id="Section 2"></section>
+        <h2>Section 2</h2>
+        <p>Mapa ng Baguio</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61240.06971607285!2d120.58874254999998!3d16.399191949999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3391a113c98366bf%3A0xc1add28ad4d5f164!2sBaguio%20City%2C%20Baguio%2C%20Benguet!5e0!3m2!1sen!2sph!4v1706692520778!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <section id="meme">
+        <h2>Meme of the Day</h2>
+        <blockquote class="twitter-tweet">
+            <p lang="en" dir="ltr">Meme of the day 😂<br>.<br>Meanwhile uses of our college degree. 😂<br>.<a href="https://twitter.com/hashtag/weekend?src=hash&amp;ref_src=twsrc%5Etfw">#weekend</a> <a href="https://twitter.com/hashtag/meme?src=hash&amp;ref_src=twsrc%5Etfw">#meme</a> <a href="https://twitter.com/hashtag/weekendfun?src=hash&amp;ref_src=twsrc%5Etfw">#weekendfun</a> <a href="https://twitter.com/hashtag/memeoftheday?src=hash&amp;ref_src=twsrc%5Etfw">#memeoftheday</a> <a href="https://t.co/Ud9jpcOryY">pic.twitter.com/Ud9jpcOryY</a></p>
+            &mdash; Ritik kumar (@itsuidesigner) <a href="https://twitter.com/itsuidesigner/status/1751094961586741758?ref_src=twsrc%5Etfw">January 27, 2024</a>
+        </blockquote> 
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </section>
+        <script src="script.js"></script>
+
     </main>
 </body>
 </html>
