Formats na dipa tapos

--- a/html3.html
+++ b/html3.html
@@ -34,9 +34,7 @@
     <div class="tab-content">
         <div id="section1" class="tab-pane">
             <h2 id="heading">Kweenling Kingdom</h2>
-            <p>Summon your inner kween! Welcome to the official Kween Yasmin Fan Club! <br>
-            Ready to join the Kweenling Kingdom? Scroll down and fill out the registration form to become and official member. <br>
-        Remember, being a Kweenling isn't just about joining a club - it's about embracing your own inner kween!</p>
+            <p>Summon your inner kween! Welcome to the official Kween Yasmin Fan Club!</p>
         </div>
 
     <div id="section2" class="tab-pane">
