--- a/timemgmt.html
+++ b/timemgmt.html
@@ -49,7 +49,7 @@
             </section>
             <section>
                 <h3>9. Learn to Say No</h3>
-                <p>It's essential to recognize your limits. Politely decline additional tasks when your schedule is already full to avoid overcommitting.</p>
+                <p>It is essential to recognize your limits. Politely decline additional tasks when your schedule is already full to avoid overcommitting.</p>
             </section>
             <section>
                 <h3>10. Reflect and Adjust</h3>
@@ -57,7 +57,7 @@
             </section>
           
             <section>
-                <h4>Conclusion:</h4>
+                <h3>Conclusion:</h3>
             <p>Effective time management is a skill that can be developed over time. By implementing these tips, you'll be on your way to a more organized and productive lifestyle.</p>
             </section>
         </article>
