--- a/timemgmt.html
+++ b/timemgmt.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>10 tips for effective time management</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <header>
@@ -57,7 +58,7 @@
             </section>
           
             <section>
-                <h3>Conclusion:</h3>
+                <h2>Conclusion:</h2>
             <p>Effective time management is a skill that can be developed over time. By implementing these tips, you'll be on your way to a more organized and productive lifestyle.</p>
             </section>
         </article>
