--- a/ai.html
+++ b/ai.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The impact of Artificial Intelligence on the Future of Work</title>
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <h1>The impact of Artificial Intelligence on the Future of Work</h1>
