--- a/portfoliotemplate/index.html
+++ b/portfoliotemplate/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>TITULO</title>
+	<title>RESUME</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -43,7 +43,7 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">Branding nyo </a>
+		         <a href="index.html"> any Brand </a>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
@@ -73,12 +73,11 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Juan Dela Cruz.</h1>
+	   			<h5>Hello, fellow tech enthusiasts!</h5>
+	   			<h1>I'm Cyrine Acedera</h1>
 
 	   			<p class="intro-position">
-	   				<span>Front-end Developer</span>
-	   				<span>UI/UX Designer</span> 
+	   				<span>IT Manager</span>
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -113,7 +112,8 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Lorem ipsum Exercitation culpa qui dolor consequat exercitation fugiat laborum ex ea eiusmod ad do aliqua occaecat nisi ad irure sunt id pariatur Duis laboris amet exercitation veniam labore consectetur ea id quis eiusmod.</p>
+   				<p class="lead">Hello, I'm Cyrine! I have been working as an IT Manager at Accenture for four years now,where I oversee and manage various technology projects and ensure the smooth operation of digital networks
+					With a deep passion for technology, my focus is on exploring the world of IT and ensuring the safety and integrity of digital networks.</p>
    			</div>   			
 
    		</div>   		
@@ -124,28 +124,32 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p>Prior to my professional career, I pursued a Bachelor of Science degree in Information Technology with a major in Network and Security at the University of the Cordilleras.
+				<br>
+				During my college years, I honed my skills in network administration, programming, and cybersecurity. My time as college student
+				allowed me to explore my passion for technologyand fostered my dedication to ensuring the safety and integrity of digital networks.
+			</p>
 
    			<ul class="info-list">
    				<li>
    					<strong>Fullname:</strong>
-   					<span>Juan Dela Cruz</span>
+   					<span>Cyrine Acedera</span>
    				</li>
    				<li>
    					<strong>Birth Date:</strong>
-   					<span>September 28, 1987</span>
+   					<span>December 17 2002</span>
    				</li>
    				<li>
    					<strong>Job:</strong>
-   					<span>Freelancer, Frontend Developer</span>
+   					<span>IT Manager</span>
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>www.kardswebsite.com</span>
+   					<span>www.louibiton.com</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>me@kardswebsite.com</span>
+   					<span>acederacy@gmail.com</span>
    				</li>
 
    			</ul> <!-- /info-list -->
@@ -155,15 +159,15 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p>I have acquired a diverse set of skill throughout my career, enabling me to excel in various areas of Information technology. Some of my key skills incluce:</p>
 
 				<ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent90"><span>90%</span></div>
+				   	<div class="progress percent90"><span>97%</span></div>
 				   	<strong>HTML5</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
+				   	<div class="progress percent85"><span>95%</span></div>
 				   	<strong>CSS3</strong>
 				   </li>
 				   <li>
@@ -171,12 +175,12 @@
 				   	<strong>JQuery</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent95"><span>95%</span></div>
+				   	<div class="progress percent95"><span>90%</span></div>
 				   	<strong>PHP</strong>
 				   </li>
 				   <li>
 
-				   	<div class="progress percent75"><span>75%</span></div>
+				   	<div class="progress percent75"><span>85%</span></div>
 				   	<strong>Wordpress</strong>
 				   </li>
       
@@ -230,13 +234,15 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>UI Designer</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>IT Manager</h3>
+	   					<p>September 2029 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Awesome Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<h4>Accenture</h4>
+	   					<p>As an IT Manager at Accenture, I oversee and manage various technology projects, ensurin seamless implementation and optimal performance of digital networks.
+							I lead a team of IT professionals, driving the successful delivery of projects and contributing to the growth and success of the organization.
+						</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -248,13 +254,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Front-end Developer</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>Senior Network Engineer</h3>
+	   					<p>July 2026 - August 2029</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Super Cool Agency</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Loui-Bitong Agency</h4>
+	   					<p>As a Senior Network Engineer at LouiBitong Agency, I played a key role in designing, implementing and maintaining network infrastructure. I collaborated with cross-functional teams to ensure network security, optimize performance, and contribute to the successful execution of projects.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -266,15 +272,24 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Web Designer</h3>
-	   					<p>May 2013 - June 2014</p>
+	   					<h3>Network Administrator</h3>
+	   					<p>November 2026  - June 2028</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Great Designs Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>RIRI Solutions</h4>
+	   					<p>As a Network Administrator at RIRI Solutions, I managed and maintained network infrasturcture, ensuring its smooth operation and security. I implemented network protocols , monitored network protocols, monitored network performance, and collaborated with teams to troubleshoot and resolve technical issues.</p>
 	   				</div>
+                    
+					<div class="timeline-header">
+						<h3>IT Support Specialist</h3>
+						<p>October 2025 - October 2026</p>
+					</div>
 
+					<div class="timeline-content">
+						<h4>Config Agency</h4>
+						<p>As an IT Support Specialist, I provided technical assistance to employees, resolving hardware and software issues. I ensured the smooth operation of computer systems, conducted troubleshooting, and implemented solutions to enhance productivity.</p>
+					</div>
 	   			</div> <!-- /timeline-block -->
 
    			</div> <!-- /timeline-wrap -->   			
