--- a/portfoliotemplate/index.html
+++ b/portfoliotemplate/index.html
@@ -74,7 +74,7 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, fellow tech enthusiasts!</h5>
-	   			<h1>I'm Cyrine Acedera</h1>
+	   			<h1>I'm Cy Acedera</h1>
 
 	   			<p class="intro-position">
 	   				<span>IT Manager</span>
@@ -112,7 +112,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Hello, I'm Cyrine! I have been working as an IT Manager at Accenture for four years now,where I oversee and manage various technology projects and ensure the smooth operation of digital networks
+   				<p class="lead">Hello, I'm Cy! I have been working as an IT Manager at Accenture for four years now,where I oversee and manage various technology projects and ensure the smooth operation of digital networks
 					With a deep passion for technology, my focus is on exploring the world of IT and ensuring the safety and integrity of digital networks.</p>
    			</div>   			
 
@@ -210,7 +210,7 @@
    			<h5>Resume</h5>
    			<h1>More of my credentials.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">As an experienced IT Manager with four years of expertise at Accenture,I bring a wealth of knowledge and skills to the table.Here are some highlights of my credentials.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -240,7 +240,7 @@
 
 	   				<div class="timeline-content">
 	   					<h4>Accenture</h4>
-	   					<p>As an IT Manager at Accenture, I oversee and manage various technology projects, ensurin seamless implementation and optimal performance of digital networks.
+	   					<p>As an IT Manager at Accenture, I oversee and manage various technology projects, ensuring seamless implementation and optimal performance of digital networks.
 							I lead a team of IT professionals, driving the successful delivery of projects and contributing to the growth and success of the organization.
 						</p>
 	   				</div>
@@ -317,13 +317,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Master Degree</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>Bachelor Degree</h3>
+	   					<p>September 2025 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>University of Life</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<h4>University of the Cordilleras</h4>
+	   					<p>Governor Pack Road,Baguio City 2600,Philippines</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -335,13 +335,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>Secondary</h3>
+	   					<p> 2019 -  2021</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>State Design University</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>PLT College, Inc.</h4>
+	   					<p>#33 Zulueta Street,Don Domingo,Madella,Bayombong,Nueva Vizcaya,Philippines</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -353,13 +353,13 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>May 2013 - June 2014</p>
+	   					<h3>Primary</h3>
+	   					<p>2008-2015</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Design College</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Uhaj Elementary School</h4>
+	   					<p>Hayyudahid,Ohaj,Banaue,Ifugao,Philippines</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -957,9 +957,8 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            1600 Amphitheatre Parkway<br>
-            Mountain View, CA<br>
-            94043 US
+            Ammugawon,Uhaj, Banaue,Ifugao<br>
+            3601,Philippines
             </p>
 
    		</div>
@@ -972,8 +971,8 @@
 
    			<h5>Email Me At</h5>
 
-   			<p>someone@kardswebsite.com<br>
-			   	info@kardswebsite.com			     
+   			<p>acederacy@gmail.com<br>
+			   	pha6726@students.uc-bcf.edu.ph			     
 			   </p>
 
    		</div>
@@ -986,9 +985,7 @@
 
    			<h5>Call Me At</h5>
 
-   			<p>Phone: (+63) 555 1212<br>
-			   	Mobile: (+63) 555 0100<br>
-			     	Fax: (+63) 555 0101
+   			<p>Phone: (+63) 970 631 0005<br>   	
 			   </p>
 
    		</div>
