--- a/portfoliotemplate/styles.html
+++ b/portfoliotemplate/styles.html
@@ -250,7 +250,7 @@
 
 			   <h3>Definition Lists</h3>	            
 
-		      <h5>a) Multi-line Definitions (default)</h5>
+		      <h5>(a) Multi-line Definitions (default)</h5>
 
 		      <dl>
 				   <dt><strong>This is a term</strong></dt>
@@ -471,7 +471,7 @@
    			<h5>Contact</h5>
    			<h1>I'd Love To Hear From You.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">Im excited to learn more about your organization and discuss how i can contribute to your success. Don't hesitate to get in touch.I'm looking forward to hearing from you!</p>
 
    		</div> 
    	</div> <!-- /section-intro -->
