modify portfolio and restarting the final activity

--- a/portfoliotemplate/index.html
+++ b/portfoliotemplate/index.html
@@ -256,7 +256,7 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Senior Network Engineer</h3>
+	   					<h3>Network Engineer</h3>
 	   					<p>July 2032 - August 2037</p>
 	   				</div>
 
@@ -444,13 +444,13 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/clouds.jpg"alt="Clouds">
+	               	<img src="images/portfolio/faultINV.jpg"alt="Fault Investigation">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Clouds</h3>	     					    
+	                     		<h3 class="folio-title">Fault Investigation</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  Fault Investigation
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -474,7 +474,7 @@
 	               </div>
 	        		</div> <!-- /folio-item -->     
 
-	        		<div class="bgrid folio-item">
+	        		<!--<div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/lighthouse.jpg" alt="Lighthouse">
 	                  <a href="#modal-05" class="overlay">             		                  
@@ -488,9 +488,9 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        		</div> <!-- /folio-item -->
+	        		</div>  /folio-item -->
 
-	            <div class="bgrid folio-item">
+	           <!---- <div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/salad.jpg" alt="Salad">
 	                  <a href="#modal-06" class="overlay">
@@ -504,7 +504,7 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        		</div> <!-- /folio-item -->   
+	        		</div>  /folio-item -->   
 
 	            <!-- modal popups - begin
 	            ============================================================= -->
@@ -538,7 +538,7 @@
 					      <h4>User Support and Training</h4>		      
 					      <p>Assisting users with network-related issues, providing technical support, and conducting training sessions to educate users on network best practices and security awareness</p>
 
-					      <div class="categories">User Support and Training</div>			               
+					      <div class="categories">Network Administrator</div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -551,14 +551,14 @@
 				   <div id="modal-03" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-clouds.jpg" alt="" />
+				     		<img src="images/portfolio/modals/FaultINV.png" alt="Fault Investigation" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Clouds</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Fault Investigation</h4>		      
+					      <p>As a Network Engineer, I am responsible for fault investigation, which involves identifying and resolving issues within the network infastructure. I leverage my expertise is network protocols, hardware components, and software configuration to diagnose and isolate faults, determine the root cause of the problem, and implement effective solution. My meticulous approach and problem-solving skills enable me to verify the resolution and maintain detailed documentation for future reference.</p>
 
-					      <div class="categories">Web Design</div>			               
+					      <div class="categories">Network Engineer</div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -588,7 +588,7 @@
 
 				   </div> <!-- /modal-04 -->
 
-				   <div id="modal-05" class="popup-modal slider mfp-hide">	
+				   <!--<div id="modal-05" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
 				     		<img src="images/portfolio/modals/m-lighthouse.jpg" alt="" />
@@ -606,9 +606,9 @@
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-				   </div> <!-- /modal-05 -->
+				   </div>  /modal-05 -->
 
-				   <div id="modal-06" class="popup-modal slider mfp-hide">	
+				 <!----  <div id="modal-06" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
 				     		<img src="images/portfolio/modals/m-salad.jpg" alt="" />
@@ -626,7 +626,7 @@
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
-				   </div> <!-- /modal-06 -->
+				   </div>  /modal-06 -->
 
 
 				   <!-- modal popups - end
