Modified Final Project

--- a/Final Activity/Tribute Page/tribute page.html
+++ b/Final Activity/Tribute Page/tribute page.html
@@ -28,7 +28,7 @@
     <section class="main-section">
         <header>1970</header>
         <ul>
-            <li>Born in a small town with a dream to make a difference</li>
+            <li>Born in a small town in Occidental Mindoro with a dream to make a difference</li>
             <li>Displayed early signs of curiosity and determination</li>
         </ul>
     </section>
