--- a/portfoliotemplate/index.html
+++ b/portfoliotemplate/index.html
@@ -460,13 +460,13 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/beetle.jpg" alt="Beetle">
+	               	<img src="images/portfolio/beetle.jpg" alt="Managing IT Staff">
 	                  <a href="#modal-04" class="overlay">                  	                 
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Beetle</h3>	     					    
+	                     		<h3 class="folio-title">Managing IT Staff</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  Managing IT Staff
 		     					      </span>		     		
 		     					   </div>  	                      	
 	                     </div>                    
@@ -571,14 +571,14 @@
 				   <div id="modal-04" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-beetle.jpg" alt="" />
+				     		<img src="images/portfolio/modals/Managing.png" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Beetle</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Managing IT Staff</h4>		      
+					      <p>Managing IT Staff involves hiring and training personnel, ensuring they stay updated with the latest technologies .IT managers monitor team performance, provide feedback and delegate tasks effieciently. They also foster a productive work environment addressing any issues that may arise, and recognizing good performance.</p>
 
-					      <div class="categories">Branding</div>			               
+					      <div class="categories">IT Manager</div>			               
 					   </div>
 
 			         <div class="link-box">
