modified portfolio and final project

--- a/Final Activity/Tribute Page/tribute page.html
+++ b/Final Activity/Tribute Page/tribute page.html
@@ -13,8 +13,8 @@
         <figure id="img-div">
            <img 
            id="image" 
-           src="pj.png"
-           alt="PJ Acedera Standing on a stage"
+           src="pjacedera.jpg"
+           alt="PJ Acedera taking a picture"
            />
            <figcaption id="img-caption">
             PJ, a remarkable individual who has made a significant impact on the lives of many. His dedication, passion, and resilience have made him a true inspiration for others
@@ -68,7 +68,7 @@
     <section class="main-section">
         <header>2003</header>
         <ul>
-            <li>Launched his own tech startup, focusing on innovative solutions</li>
+            <li>focused on innovative solutions</li>
             <li>Received a funding and suppoty for his entrepreneurial venture</li>
         </ul>
     </section>
@@ -77,15 +77,7 @@
         <header>2008</header>
         <ul>
             <li>Expanded his startup's operations and team</li>
-            <li>Received recgnition for her entrepreneurial achievements</li>
-        </ul>
-    </section>
-
-    <section class="main-section">
-        <header>2010</header>
-        <ul>
-            <li>Published a book on his experiences as a tecg entrepreneur</li>
-            <li>Became a sought-after speaker at tech conferences and events</li>
+            <li>Received recognition for her entrepreneurial achievements</li>
         </ul>
     </section>
 
@@ -117,7 +109,7 @@
         <header>2020</header>
         <ul>
             <li>Started a philanthropic initiative to support unprivileged communities</li>
-            <li>Investd in education and technology access for marginalized groups</li>
+            <li>Invest in education and technology access for marginalized groups</li>
         </ul>
     </section>
     
