--- a/Final Activity/Product Landing Page/FormSubmission.html
+++ b/Final Activity/Product Landing Page/FormSubmission.html
@@ -10,6 +10,7 @@
     <div class="success-message">
         <h2>Thank you for submitting your email!</h2>
         <p>We will get in touch with you soon.</p>
+        <a href="product landing page.html">Return to Home</a>
     </div>
 </body>
 </html>
